--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/form-observacion-expensas/form-observacion-expensas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/form-observacion-expensas/form-observacion-expensas.component.html
@@ -5,7 +5,7 @@
         </a>
     </div>
     <h1 class="title-menu--h1">
-        Verificar solicitud {{ solicitudPago.numeroSolicitud }}
+        Autorizar solicitud {{ solicitudPago.numeroSolicitud }}
     </h1>
     <p style="margin-top: 0.5em;">
         <span>Tipo de solicitud: <b>Expensas</b></span>
