--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/form-amortizacion/form-amortizacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/form-amortizacion/form-amortizacion.component.html
@@ -1,23 +1,16 @@
-<section *ngIf="solicitudPagoCargarFormaPago !== undefined">
-    <mat-card class="shipping-card var-main-gris">
+<section>
+    <mat-card class="shipping-card">
         <mat-card-header class="header-card header-card--margin">
-            <mat-card-title class="header-card--text textoGris">
-                Forma de pago
+            <mat-card-title class="header-card--text">
+                Amortización del anticipo en el criterio de pago
             </mat-card-title>
         </mat-card-header>
         <mat-card-content style="text-align: left;">
-            <mat-card-title class="header-card--text alineacion-titulos2" style="padding-left: 0px;" *ngIf="solicitudPagoCargarFormaPago.fasePreConstruccionFormaPagoCodigo !== undefined">
-                Fase 1 - Preconstrucción
-            </mat-card-title>
-            <p *ngIf="solicitudPagoCargarFormaPago.fasePreConstruccionFormaPagoCodigo !== undefined"><strong>Forma de pago:</strong> {{ getFormaPago( solicitudPagoCargarFormaPago.fasePreConstruccionFormaPagoCodigo ) }} </p>
-            <mat-card-title class="header-card--text alineacion-titulos2 mt-1em"
-                style="padding-left: 0px; margin-top: 1em;" *ngIf="solicitudPagoCargarFormaPago.faseConstruccionFormaPagoCodigo !== undefined">
-                Fase 2 - Construcción
-            </mat-card-title>
-            <p *ngIf="solicitudPagoCargarFormaPago.faseConstruccionFormaPagoCodigo !== undefined"><strong>Forma de pago:</strong> {{ getFormaPago( solicitudPagoCargarFormaPago.faseConstruccionFormaPagoCodigo ) }} </p>
+            <p><strong>Porcentaje de amortización:</strong> {{ detalleForm.get( 'porcentajeAmortizacion' ).value }}% </p>
+            <p><strong>Valor de amortización:</strong> {{ detalleForm.get( 'valorAmortizacion' ).value }} </p>
         </mat-card-content>
     </mat-card>
-    
+
     <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
         <mat-card class="shipping-card var-main-gris">
             <mat-card-header class="header-card header-card--margin">
@@ -27,8 +20,8 @@
             </mat-card-header>
             <mat-card-content style="text-align: left;">
                 <p><b> {{ addressForm.get( 'fechaCreacion' ).value | date: 'dd/MM/yyyy' }} </b></p>
-                <p *ngIf="addressForm.get( 'tieneObservaciones' ).value === true"><b>¿Desde la coordinación tiene observaciones a la forma de pago?:</b> Si </p>
-                <p *ngIf="addressForm.get( 'tieneObservaciones' ).value === false"><b>¿Desde la coordinación tiene observaciones a la forma de pago?:</b> No</p>
+                <p *ngIf="addressForm.get( 'tieneObservaciones' ).value === true"><b>¿Desde la coordinación tiene observaciones a la amortización del anticipo?:</b> Si</p>
+                <p *ngIf="addressForm.get( 'tieneObservaciones' ).value === false"><b>¿Desde la coordinación tiene observaciones a la amortización del anticipo?:</b> No</p>
                 <section [innerHTML]="addressForm.get( 'observaciones' ).value" *ngIf="addressForm.get( 'tieneObservaciones' ).value === true"></section>
             </mat-card-content>
         </mat-card>
@@ -37,11 +30,11 @@
         <form [formGroup]="addressForm" (ngSubmit)="onSubmit()">
             <div class="row mtop justCenter">
                 <div class="col-md-5">
-                    <label class="label-left">¿Desde la coordinación tiene observaciones a la forma de pago?</label>
+                    <label class="label-left">¿Desde la coordinación tiene observaciones a la amortización del anticipo?</label>
                 </div>
                 <div class="col-md-2">
                     <mat-radio-group aria-labelledby="example-radio-group-label" class="radioInput"
-                        formControlName="tieneObservaciones" required>
+                        formControlName="tieneObservaciones">
                         <mat-radio-button class="radio-button" [value]="true">Sí</mat-radio-button>
                         <mat-radio-button class="radio-button" [value]="false">No</mat-radio-button>
                     </mat-radio-group>
@@ -50,7 +43,7 @@
             </div>
             <div class="d-flex align-items-center mtop" *ngIf="addressForm.get('tieneObservaciones').value === true">
                 <div class="text-area-quill izqTitle">
-                    <label for="observaciones" class="text-area-quill--label" style="color: #174193;">Observaciones a la forma de pago</label>
+                    <label for="observaciones" class="text-area-quill--label" style="color: #174193;">Observaciones a la amortización del anticipo</label>
                     <quill-editor class="quill-editor-style" [styles]="editorStyle" [modules]="config" required
                         (onContentChanged)="maxLength($event, 1000)" formControlName="observaciones" #observaciones></quill-editor>
                 </div>
@@ -61,7 +54,8 @@
                     1000
                 </span>
             </div>
-            <button mat-button color="warn" class="btn-guardar" type="submit">
+            <button mat-button color="warn" class="btn-guardar"
+                type="submit">
                 <img src="assets/img/icon/guardar.svg" alt="Guardar">
             </button>
         </form>
