--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/obs-criterio-pagos-autoriz/obs-criterio-pagos-autoriz.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/obs-criterio-pagos-autoriz/obs-criterio-pagos-autoriz.component.html
@@ -35,8 +35,10 @@
                             </mat-card-title>
                         </mat-card-header>
                         <mat-card-content style="text-align: left;">
-                            <p><b>07/10/2020</b></p>
-                            <p><b>¿Desde la coordinación tiene observaciones a los criterios de pago incluidos en la factura?:</b> No</p>
+                            <p><b> {{ addressForm.get( 'fechaCreacion' ).value | date: 'dd/MM/yyyy' }} </b></p>
+                            <p *ngIf="addressForm.get( 'tieneObservaciones' ).value === true"><b>¿Desde la coordinación tiene observaciones a los criterios de pago incluidos en la factura?:</b> Si</p>
+                            <p *ngIf="addressForm.get( 'tieneObservaciones' ).value === false"><b>¿Desde la coordinación tiene observaciones a los criterios de pago incluidos en la factura?:</b> No</p>
+                            <section [innerHTML]="addressForm.get( 'observaciones' ).value" *ngIf="addressForm.get( 'tieneObservaciones' ).value === true"></section>
                         </mat-card-content>
                     </mat-card>
                 </ng-container>
