--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/obs-desc-dir-tecnica-autoriz/obs-desc-dir-tecnica-autoriz.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/obs-desc-dir-tecnica-autoriz/obs-desc-dir-tecnica-autoriz.component.html
@@ -23,7 +23,6 @@
             </mat-card>
         </div>
     </div>
-
     <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
         <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;">
             <mat-card-header class="header-card header-card--margin">
@@ -32,15 +31,17 @@
                 </mat-card-title>
             </mat-card-header>
             <mat-card-content style="text-align: left;">
-                <p><b>07/10/2020</b></p>
-                <p><b>¿Desde la coordinación tiene observaciones a los descuentos de la Dirección Técnica?:</b> No</p>
+                <p><b> {{ addressForm.get( 'fechaCreacion' ).value | date: 'dd/MM/yyyy' }} </b></p>
+                <p *ngIf="addressForm.get( 'tieneObservaciones' ).value === true"><b>¿Desde la coordinación tiene observaciones a los descuentos de la Dirección Técnica?:</b> Si</p>
+                <p *ngIf="addressForm.get( 'tieneObservaciones' ).value === false"><b>¿Desde la coordinación tiene observaciones a los descuentos de la Dirección Técnica?:</b> No</p>
+                <section [innerHTML]="addressForm.get( 'observaciones' ).value" *ngIf="addressForm.get( 'tieneObservaciones' ).value === true"></section>
             </mat-card-content>
         </mat-card>
     </ng-container>
     <ng-template #noEsVerDetalle>
         <form [formGroup]="addressForm" (ngSubmit)="onSubmit()">
             <div class="row mtop justCenter">
-                <div class="col-md-7">
+                <div class="col-md-6">
                     <label class="label-left">¿Desde la coordinación tiene observaciones a los descuentos de la Dirección Técnica?</label>
                 </div>
                 <div class="col-md-2">
@@ -54,7 +55,7 @@
             </div>
             <div class="d-flex align-items-center mtop" *ngIf="addressForm.get('tieneObservaciones').value === true">
                 <div class="text-area-quill izqTitle">
-                    <label for="observaciones" class="text-area-quill--label" style="color: #174193;">Observaciones a los descuentos de la Dirección Técnica</label>
+                    <label for="observaciones" class="text-area-quill--label"  style="color: #174193;">Observaciones a los descuentos de la Dirección Técnica</label>
                     <quill-editor class="quill-editor-style" [styles]="editorStyle" [modules]="config" required
                         (onContentChanged)="maxLength($event, 1000)" formControlName="observaciones" #observaciones></quill-editor>
                 </div>
@@ -65,11 +66,10 @@
                     1000
                 </span>
             </div>
-            <button mat-button color="warn" class="btn-guardar mt1"
+            <button mat-button color="warn" class="btn-guardar"
                 type="submit">
                 <img src="assets/img/icon/guardar.svg" alt="Guardar">
             </button>
         </form>
     </ng-template>
-    
 </section>
