--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/obs-detllfact-procasoc-autoriz/obs-detllfact-procasoc-autoriz.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/obs-detllfact-procasoc-autoriz/obs-detllfact-procasoc-autoriz.component.html
@@ -28,9 +28,8 @@
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
-        <!--<mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>-->
     </div>
-    
+
     <ng-container *ngIf="esMultiProyecto === true; else noEsMultiProyecto">
         <form [formGroup]="addressForm" (ngSubmit)="onSubmit()">
             <div formArrayName="projects" style="margin-top: 3em;" *ngIf="projects.length > 0">
@@ -48,7 +47,9 @@
                             <br>
                             <div class="d-flex">
                                 <strong>Criterios:</strong>
-                                <p *ngFor="let criterio of criteriosArraySeleccionados; index as i" style="margin-left: .4em;"> {{ filterCriterios( criterio.codigo ) }}<span *ngIf="criteriosArraySeleccionados.length - 1 !== i">,</span><span *ngIf="criteriosArraySeleccionados.length - 1 === i">.</span> </p>
+                                <section>
+                                    <p *ngFor="let criterio of criteriosArraySeleccionados; index as i" style="margin-left: .4em;"> {{ filterCriterios( criterio.codigo ) }}<span *ngIf="criteriosArraySeleccionados.length - 1 !== i">,</span><span *ngIf="criteriosArraySeleccionados.length - 1 === i">.</span> </p>
+                                </section>
                             </div>
                             <section formArrayName="criteriosProyecto" class="mt-1em" *ngIf="criteriosProyecto( i ).length > 0">
                                 <div *ngFor="let criterioProyecto of criteriosProyecto( i ).controls; index as j" [formGroup]="criterioProyecto">
@@ -62,51 +63,6 @@
                     </mat-card>
                 </div>
             </div>
-            <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
-                <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;">
-                    <mat-card-header class="header-card header-card--margin">
-                        <mat-card-title class="header-card--text textoGris">
-                            Observación de la coordinación
-                        </mat-card-title>
-                    </mat-card-header>
-                    <mat-card-content style="text-align: left;">
-                        <p><b>07/10/2020</b></p>
-                        <p><b>¿Desde la coordinación tiene observaciones a los detalles de la factura para proyectos asociados?:</b> No</p>
-                    </mat-card-content>
-                </mat-card>
-            </ng-container>
-            <ng-template #noEsVerDetalle>
-                <div class="row mtop justCenter">
-                    <div class="col-md-7">
-                        <label class="label-left">¿Desde la coordinación tiene observaciones a los detalles de la factura para proyectos asociados?</label>
-                    </div>
-                    <div class="col-md-2">
-                        <mat-radio-group aria-labelledby="example-radio-group-label" class="radioInput"
-                            formControlName="tieneObservaciones">
-                            <mat-radio-button class="radio-button" [value]="true">Sí</mat-radio-button>
-                            <mat-radio-button class="radio-button" [value]="false">No</mat-radio-button>
-                        </mat-radio-group>
-                        <span class="required-form-group" style="margin-left: 1px;">*</span>
-                    </div>
-                </div>
-                <div class="d-flex align-items-center mtop" *ngIf="addressForm.get('tieneObservaciones').value === true">
-                    <div class="text-area-quill izqTitle">
-                        <label for="observaciones" class="text-area-quill--label"  style="color: #174193;">Observaciones a los detalles de la factura para proyectos asociados</label>
-                        <quill-editor class="quill-editor-style" [styles]="editorStyle" [modules]="config" required
-                            (onContentChanged)="maxLength($event, 1000)" formControlName="observaciones" #observaciones></quill-editor>
-                    </div>
-                    <span class="contador" *ngIf="addressForm.get('observaciones').value">
-                        {{1000 - (textoLimpio(observaciones.quillEditor,1000))}}
-                    </span>
-                    <span class="contador" *ngIf="addressForm.get('observaciones').value === null">
-                        1000
-                    </span>
-                </div>
-                <button mat-button color="warn" class="btn-guardar"
-                    type="submit">
-                    <img src="assets/img/icon/guardar.svg" alt="Guardar">
-                </button>
-            </ng-template>
         </form>
     </ng-container>
     <ng-template #noEsMultiProyecto>
@@ -123,7 +79,9 @@
                     <br>
                     <div class="d-flex">
                         <strong>Criterio:</strong>
-                        <p *ngFor="let criterio of criteriosArraySeleccionados; index as i" style="margin-left: .4em;"> {{ filterCriterios( criterio.codigo ) }}<span *ngIf="criteriosArraySeleccionados.length - 1 !== i">,</span><span *ngIf="criteriosArraySeleccionados.length - 1 === i">.</span> </p>
+                        <section>
+                            <p *ngFor="let criterio of criteriosArraySeleccionados; index as i" style="margin-left: .4em;"> {{ filterCriterios( criterio.codigo ) }}<span *ngIf="criteriosArraySeleccionados.length - 1 !== i">,</span><span *ngIf="criteriosArraySeleccionados.length - 1 === i">.</span> </p>
+                        </section>
                     </div>
                     <br>
                     <div *ngFor="let criterio of solicitudPagoFaseCriterio">
@@ -134,52 +92,54 @@
                 </mat-card-content>
             </mat-card>
         </div>
-        <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
-            <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;">
-                <mat-card-header class="header-card header-card--margin">
-                    <mat-card-title class="header-card--text textoGris">
-                        Observación de la coordinación
-                    </mat-card-title>
-                </mat-card-header>
-                <mat-card-content style="text-align: left;">
-                    <p><b>07/10/2020</b></p>
-                    <p><b>¿Desde la coordinación tiene observaciones a los detalles de la factura para proyectos asociados?:</b> No</p>
-                </mat-card-content>
-            </mat-card>
-        </ng-container>
-        <ng-template #noEsVerDetalle>
-            <form [formGroup]="addressForm" (ngSubmit)="onSubmit()">
-                <div class="row mtop justCenter">
-                    <div class="col-md-7">
-                        <label class="label-left">¿Desde la coordinación tiene observaciones a los detalles de la factura para proyectos asociados?</label>
-                    </div>
-                    <div class="col-md-2">
-                        <mat-radio-group aria-labelledby="example-radio-group-label" class="radioInput"
-                            formControlName="tieneObservaciones">
-                            <mat-radio-button class="radio-button" [value]="true">Sí</mat-radio-button>
-                            <mat-radio-button class="radio-button" [value]="false">No</mat-radio-button>
-                        </mat-radio-group>
-                        <span class="required-form-group" style="margin-left: 1px;">*</span>
-                    </div>
+    </ng-template>
+    <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
+        <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;">
+            <mat-card-header class="header-card header-card--margin">
+                <mat-card-title class="header-card--text textoGris">
+                    Observación de la coordinación
+                </mat-card-title>
+            </mat-card-header>
+            <mat-card-content style="text-align: left;">
+                <p><b> {{ addressForm.get( 'fechaCreacion' ).value | date: 'dd/MM/yyyy' }} </b></p>
+                <p *ngIf="addressForm.get( 'tieneObservaciones' ).value === true"><b>¿Desde la coordinación tiene observaciones a los detalles de la factura para proyectos asociados?:</b> Si</p>
+                <p *ngIf="addressForm.get( 'tieneObservaciones' ).value === false"><b>¿Desde la coordinación tiene observaciones a los detalles de la factura para proyectos asociados?:</b> No</p>
+                <section [innerHTML]="addressForm.get( 'observaciones' ).value" *ngIf="addressForm.get( 'tieneObservaciones' ).value === true"></section>
+            </mat-card-content>
+        </mat-card>
+    </ng-container>
+    <ng-template #noEsVerDetalle>
+        <form [formGroup]="addressForm" (ngSubmit)="onSubmit()">
+            <div class="row mtop justCenter">
+                <div class="col-md-7">
+                    <label class="label-left">¿Desde la coordinación tiene observaciones a los detalles de la factura para proyectos asociados?</label>
                 </div>
-                <div class="d-flex align-items-center mtop" *ngIf="addressForm.get('tieneObservaciones').value === true">
-                    <div class="text-area-quill izqTitle">
-                        <label for="observaciones" class="text-area-quill--label"  style="color: #174193;">Observaciones a los detalles de la factura para proyectos asociados</label>
-                        <quill-editor class="quill-editor-style" [styles]="editorStyle" [modules]="config" required
-                            (onContentChanged)="maxLength($event, 1000)" formControlName="observaciones" #observaciones></quill-editor>
-                    </div>
-                    <span class="contador" *ngIf="addressForm.get('observaciones').value">
-                        {{1000 - (textoLimpio(observaciones.quillEditor,1000))}}
-                    </span>
-                    <span class="contador" *ngIf="addressForm.get('observaciones').value === null">
-                        1000
-                    </span>
+                <div class="col-md-2">
+                    <mat-radio-group aria-labelledby="example-radio-group-label" class="radioInput"
+                        formControlName="tieneObservaciones">
+                        <mat-radio-button class="radio-button" [value]="true">Sí</mat-radio-button>
+                        <mat-radio-button class="radio-button" [value]="false">No</mat-radio-button>
+                    </mat-radio-group>
+                    <span class="required-form-group" style="margin-left: 1px;">*</span>
                 </div>
-                <button mat-button color="warn" class="btn-guardar"
-                    type="submit">
-                    <img src="assets/img/icon/guardar.svg" alt="Guardar">
-                </button>
-            </form>
-        </ng-template>
+            </div>
+            <div class="d-flex align-items-center mtop" *ngIf="addressForm.get('tieneObservaciones').value === true">
+                <div class="text-area-quill izqTitle">
+                    <label for="observaciones" class="text-area-quill--label"  style="color: #174193;">Observaciones a los detalles de la factura para proyectos asociados</label>
+                    <quill-editor class="quill-editor-style" [styles]="editorStyle" [modules]="config" required
+                        (onContentChanged)="maxLength($event, 1000)" formControlName="observaciones" #observaciones></quill-editor>
+                </div>
+                <span class="contador" *ngIf="addressForm.get('observaciones').value">
+                    {{1000 - (textoLimpio(observaciones.quillEditor,1000))}}
+                </span>
+                <span class="contador" *ngIf="addressForm.get('observaciones').value === null">
+                    1000
+                </span>
+            </div>
+            <button mat-button color="warn" class="btn-guardar"
+                type="submit">
+                <img src="assets/img/icon/guardar.svg" alt="Guardar">
+            </button>
+        </form>
     </ng-template>
 </section>
