--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
@@ -9,7 +9,7 @@
     <mat-expansion-panel class="expansion-style">
       <mat-expansion-panel-header class="expansion-style--header">
         <mat-panel-title class="expansion-style--title 
-        {{estadoInforme == '0' || estadoInforme == null ? 
+        {{estadoInforme == '0' || estadoInforme == null || semaforo ? 
           'sin-diligenciar' : estadoInforme == '1' || registroCompleto == false ? 
                 'en-proceso' : 'completo' }}">
                 Informe final y anexos
