--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-informe-final-proyecto/tabla-informe-final-proyecto.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-informe-final-proyecto/tabla-informe-final-proyecto.component.html
@@ -16,7 +16,7 @@
         Fecha de envío del informe final
       </th>
       <td mat-cell *matCellDef="let element">
-        <b>{{ element.fechaEnvio }}</b>
+        <b>{{ element.fechaCreacion  | date:'dd/MM/yyyy'}}</b>
       </td>
     </ng-container>
 
@@ -25,7 +25,7 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Llave MEN
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.llaveMen }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.proyecto.llaveMen }}</td>
     </ng-container>
 
     <!-- tipoIntervencion Column -->
@@ -33,7 +33,7 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Tipo de intervención
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.tipoIntervencion }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.proyecto.tipoIntervencionString }}</td>
     </ng-container>
 
     <!-- institucionEducativa Column -->
@@ -42,7 +42,7 @@
         Institución Educativa
       </th>
       <td mat-cell *matCellDef="let element">
-        {{ element.institucionEducativa }}
+        {{ element.proyecto.institucionEducativa.nombre }}
       </td>
     </ng-container>
 
@@ -51,21 +51,21 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Sede
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.sedeEducativa }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.proyecto.sede.nombre }}</td>
     </ng-container>
 
     <!-- estadoVerificacion Column -->
-    <ng-container matColumnDef="estadoVerificacion">
+    <ng-container matColumnDef="estadoAprobacionString">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Estado de la verificación
+        Estado de la validación
       </th>
       <td mat-cell *matCellDef="let element">
-        {{ element.estadoVerificacion }}
+        {{ element.estadoAprobacionString }}
       </td>
     </ng-container>
 
     <!-- contratacionProyectoId Column -->
-    <ng-container matColumnDef="contratacionProyectoId">
+    <ng-container matColumnDef="proyectoId">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Gestión
       </th>
@@ -75,7 +75,7 @@
           mat-raised-button
           color="accent"
           class="btn-table"
-          [routerLink]="['validar', element.contratacionProyectoId]"
+          [routerLink]="['validar', element.proyectoId]"
         >
         Validar informe
         </a>
