--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-detalle/tabla-detalle.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-detalle/tabla-detalle.component.html
@@ -7,7 +7,7 @@
         <ng-container matColumnDef="No">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>No.</th>
           <td mat-cell *matCellDef="let element">
-            <b>{{ element.informeFinalListaChequeoId }}</b>
+            <b>{{ element.informeFinalListaChequeo.posicion }}</b>
           </td>
         </ng-container>
   
@@ -23,7 +23,7 @@
         <ng-container matColumnDef="calificacionInterventoria">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Calificación interventoría</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.calificacionCodigo }}
+            {{ element.calificacionCodigoString }}
           </td>
         </ng-container>
   
@@ -32,7 +32,7 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Tipo de anexo</th>
           <td mat-cell *matCellDef="let element">
             <div *ngIf="element.calificacionCodigo === '1'">
-              {{ element.informeFinalAnexo.tipoAnexo }}
+              {{ element.informeFinalAnexo.tipoAnexoString }}
             </div>
           </td>
         </ng-container>
@@ -43,15 +43,33 @@
           <td mat-cell *matCellDef="let element">
             <div *ngIf="element.calificacionCodigo === '1'">
               <!--Físico-->
-              <span *ngIf="element.informeFinalAnexo.tipoAnexo === '1'">{{ element.informeFinalAnexo.numRadicadoSac }} / {{ element.informeFinalAnexo.fechaRadicado | date:'dd/MM/yyyy'}} </span>
+              <span *ngIf="element.informeFinalAnexo.tipoAnexo === '1'">
+                <b>SAC:</b>
+                {{ element.informeFinalAnexo.numRadicadoSac }} <br />
+                <b>Fecha:</b>
+                {{ element.informeFinalAnexo.fechaRadicado | date: 'dd/MM/yyyy' }}
+              </span>
               <!--Digital-->
-              <span *ngIf="element.informeFinalAnexo.tipoAnexo === '2'">{{ element.informeFinalAnexo.urlSoporte }}</span>
+              <span *ngIf="element.informeFinalAnexo.tipoAnexo === '2'">
+                {{ element.informeFinalAnexo.urlSoporte }}
+              </span>
             </div>
           </td>
         </ng-container>
   
         <!-- verificacion Column -->
         <ng-container matColumnDef="verificacion">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            Estado del requisito
+          </th>
+          <td mat-cell *matCellDef="let element">
+            <span *ngIf="element.validacionCodigo === '1'">Cumple</span>
+            <span *ngIf="element.validacionCodigo === '2'">No cumple</span>
+            <span *ngIf="element.validacionCodigo === '3'">No aplica</span>
+          </td>
+        </ng-container>
+
+       <!--<ng-container matColumnDef="verificacion">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Verificación</th>
           <td mat-cell *matCellDef="let element">
             <section class="slect-table-contain mt-1em">
@@ -63,7 +81,7 @@
                   </mat-option>
                 </mat-select>
               </mat-form-field>
-              <span class="icon-incompleto">
+              <span class="icon-incompleto">l
                 <img
                   class="icon-incompleto--img"
                   src="assets/img/icon/incompleto.svg"
@@ -76,7 +94,7 @@
               </span>
             </section>
           </td>
-        </ng-container>
+        </ng-container>-->
   
         <!-- Id Column -->
         <ng-container matColumnDef="id">
