--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-editar-solicitud-pago/verdetalle-editar-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-editar-solicitud-pago/verdetalle-editar-solicitud-pago.component.html
@@ -124,7 +124,7 @@
                     Validar lista de chequeo
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <app-validar-lista-chequeo [solicitudPago]="contrato.solicitudPagoOnly"></app-validar-lista-chequeo>
+            <app-validar-lista-chequeo [contrato]="contrato"></app-validar-lista-chequeo>
         </mat-expansion-panel>
     </mat-accordion>
     <mat-accordion>
