--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-proyecto/tabla-informe-final-proyecto.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-proyecto/tabla-informe-final-proyecto.component.html
@@ -150,7 +150,7 @@
         class="btn-table"
         [routerLink]="['registrar', element.proyectoId]"
       >
-        <span>Ver observaciones de supervisor
+        <span>Ver detalle / Editar
         </span>
       </a>
       </td>
