--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
@@ -97,7 +97,7 @@
                       <mat-label *ngIf="element.validacionCodigo != null">{{
                         element.validacionCodigoString
                       }}</mat-label>
-                      <mat-select [(ngModel)]="element.validacionCodigo" required>
+                      <mat-select [(ngModel)]="element.validacionCodigo" (selectionChange)="changeState()" required>
                         <mat-option *ngFor="let estado of estadoArray" [value]="estado.value">
                           {{ estado.name }}
                         </mat-option>
