--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
@@ -132,7 +132,7 @@
           type="button"
           (click)="enviarRegistroFinal(element.proyectoId)"
         >
-        Enviar informe a validación
+        Enviar al supervisor
       </button>
        <button
        *ngIf="element.estadoInformeCod === '4'"
