--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
@@ -14,6 +14,7 @@
                 'en-proceso' : 'completo' }}">
                 Informe final y anexos
         </mat-panel-title>
+        
       </mat-expansion-panel-header>
       <div class="d-flex align-items-center info-text en-alertaLibre">
         Seleccione si el item Cumple, No cumple o No aplica, tenga en cuenta que para continuar el proceso todos los items
@@ -50,7 +51,7 @@
               <section class="slect-table-contain mt-1em">
                 <mat-form-field class="select-width">
                   <mat-label>{{ element.calificacionCodigoString }}</mat-label>
-                  <mat-select [(ngModel)]="element.calificacionCodigo" required>
+                  <mat-select [(ngModel)]="element.calificacionCodigo" (selectionChange)="changeState()" required>
                     <mat-option *ngFor="let estado of estadoArray" [value]="estado.value">
                       {{ estado.name }}
                     </mat-option>
@@ -76,7 +77,7 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestión</th>
             <td mat-cell *matCellDef="let element">
               <button
-                *ngIf="element.calificacionCodigo === '1' || element.calificacionCodigo === 1"
+                *ngIf="(element.estadoInformeFinal !== '4' && (element.calificacionCodigo === '1' || element.calificacionCodigo === 1) ) || (element.calificacionCodigo === '1' && element.estadoInformeFinal === '4' && !element.tieneObservacionSupervisor)"
                 mat-button
                 color="warn"
                 mat-raised-button
@@ -88,10 +89,25 @@
                 <span *ngIf="(element.informeFinalAnexoId == null || element.informeFinalAnexoId == 0) && (element.tieneAnexo == null || !element.tieneAnexo)">
                   Tipo de documento
                 </span>
-                <span *ngIf="(element.estadoInformeFinal !== '4' && element.informeFinalAnexoId != null && element.informeFinalAnexoId > 0) || (element.estadoInformeFinal ==='4' && element.tieneObservacionSupervisor) || element.tieneAnexo">
+                <span *ngIf="(element.estadoInformeFinal !== '4' && element.informeFinalAnexoId != null && element.informeFinalAnexoId > 0)  || element.tieneAnexo">
                   Ver detalle/ Editar
                 </span>
                 <span *ngIf="element.estadoInformeFinal === '4' && !element.tieneObservacionSupervisor"> Ver detalle </span>
+              </button>
+              <!--Ver detalle/editar solo cuando es devuleto por supervisor-->
+              <button
+                *ngIf="element.estadoInformeFinal ==='4' && element.tieneObservacionSupervisor && (element.calificacionCodigo === '1' || element.calificacionCodigo === 1)"
+                mat-button
+                color="warn"
+                mat-raised-button
+                color="accent"
+                class="btn-table animatedOpacity info-button"
+                [class.completo]="element.estadoInformeFinal ==='4' && element.tieneObservacionSupervisor && editadoSupervision"
+                [class.sin-diligenciar]="element.estadoInformeFinal ==='4' && element.tieneObservacionSupervisor && !editadoSupervision"
+                type="button"
+                (click)="openDialogTipoDocumento(element)"
+              >
+                  Ver detalle/ Editar
               </button>
               <button
                 *ngIf="element.calificacionCodigo === '2' || element.calificacionCodigo === 2"
