--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/registrar-informacion-adicional/registrar-informacion-adicional.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/registrar-informacion-adicional/registrar-informacion-adicional.component.html
@@ -247,4 +247,9 @@
       </button>
     </div>
   </form>
+  <app-tabla-observaciones
+                          [DisponibilidadPresupuestal]="objetoDisponibilidad"
+                          *ngIf="objetoDisponibilidad && objetoDisponibilidad.estadoSolicitudCodigo === '2'"
+        >
+  </app-tabla-observaciones>
 </div>
