--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
@@ -140,7 +140,7 @@
       </div>
       
       <div class="text-center">
-        <button mat-button color="warn" class="btn-guardar" (click)="onSubmit()">
+        <button mat-button color="warn" class="btn-guardar" (click)="onSubmit(false)">
           <img src="assets/img/icon/guardar.svg" alt="Guardar" />
         </button>
       </div>
