--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
@@ -101,7 +101,7 @@
           class="btn-table"
           [routerLink]="['verificar', element.proyectoId]"
         >
-          Validar informe
+          Verificar informe
         </a>
         <a *ngIf="element.estadoValidacion === '1' || element.estadoValidacion === '2'"
           mat-button
