--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/form-recibo-a-satisfaccion/form-recibo-a-satisfaccion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/form-recibo-a-satisfaccion/form-recibo-a-satisfaccion.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
+<form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit(false)">
   <mat-card class="shipping-card">
     <mat-card-header class="header-card header-card--margin">
       <mat-card-title class="mat-card-title header-card--text"> Recibo a satisfacción </mat-card-title>
