--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/ver-detalle-informe-final/ver-detalle-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/ver-detalle-informe-final/ver-detalle-informe-final.component.html
@@ -18,7 +18,7 @@
   </div>
 
   <app-datos-del-proyecto *ngIf="report" [report]="report"></app-datos-del-proyecto>
-  <app-recibo-satisfaccion *ngIf="report" [report]="report"></app-recibo-satisfaccion>
+  <app-recibo-satisfaccion *ngIf="report" [report]="report" [existeObservacion]="existeObservacion"></app-recibo-satisfaccion>
   <app-tabla-detalle *ngIf="report" [id]="report.proyecto.informeFinal[0].informeFinalId" [llaveMen]="report.proyecto.llaveMen"></app-tabla-detalle>
 
 </section>
